# Proof-play

./: .env.example  .gitignore  .prettierignore  Anchor.toml  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  playwright.config.ts  tsconfig.base.json  tsconfig.tooling.json  vitest.config.ts
.github/workflows/: ci.yml
apps/web/: eslint.config.mjs  next.config.ts  package.json  tsconfig.json  vite.config.ts
docs/: condition-compiler.md  demo-script.md  operations-runbook.md  pool-program.md  product-spec.md  replay-keeper-receipt.md  security-compliance.md  state-model.md  submission-checklist.md  submission.md  txline-adapter.md  txline-devnet.md  txline-feedback.md  wallet-participation.md
docs/adr/: 0001-hackathon-architecture.md  0002-binary-parimutuel-pools.md  README.md  (+1 more)
programs/proof_play/: Cargo.toml
programs/proof_play/src/: errors.rs  events.rs  instructions.rs  lib.rs  state.rs  txline.rs
tests/: condition-engine.test.ts  environment.test.ts  health.test.ts  judge-demo.test.ts  keeper-health.test.ts  keeper.test.ts  proof-receipt.test.ts  replay.test.ts  security-headers.test.ts  txline-adapter.test.ts  txline-normalizers.test.ts  txline-routes.test.ts  txline-sse.test.ts  txline.test.ts  wallet-program-client.test.ts  workspace-contract.test.ts
tooling/: capture-submission-media.mjs  check-client-secrets.mjs  check-compliance.mjs  check-repository-secrets.mjs  check-workspace-graph.mjs  fund-demo-wallet-devnet.ts  record-submission-demo.mjs  verify-pool-lifecycle-devnet.ts  verify-proof-settlement-devnet.ts
(+64 files in other folders)
