[package]
name = "proof_play"
version = "0.1.0"
description = "ProofPlay pool and settlement program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "proof_play"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
  'cfg(target_os, values("solana"))',
  'cfg(feature, values("anchor-debug", "custom-heap", "custom-panic"))',
] }
